cluster/apps/monitoring/loki/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-loki-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https, wss"
