cluster/apps/monitoring/loki/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: loki-gateway
          namespace: monitoring
          port: 80
          scheme: http
  tls:
    secretName: ${SECRET_CERT}
